; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/iwm/extr_if_iwm.c_iwm_mvm_flush_tx_path.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/iwm/extr_if_iwm.c_iwm_mvm_flush_tx_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwm_softc = type { i32 }
%struct.iwm_tx_path_flush_cmd = type { i32, i32 }

@IWM_DUMP_TX_FIFO_FLUSH = common dso_local global i32 0, align 4
@IWM_TXPATH_FLUSH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"Flushing tx queue failed: %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iwm_mvm_flush_tx_path(%struct.iwm_softc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.iwm_softc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.iwm_tx_path_flush_cmd, align 4
  store %struct.iwm_softc* %0, %struct.iwm_softc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = getelementptr inbounds %struct.iwm_tx_path_flush_cmd, %struct.iwm_tx_path_flush_cmd* %8, i32 0, i32 0
  %10 = load i32, i32* @IWM_DUMP_TX_FIFO_FLUSH, align 4
  %11 = call i32 @htole16(i32 %10)
  store i32 %11, i32* %9, align 4
  %12 = getelementptr inbounds %struct.iwm_tx_path_flush_cmd, %struct.iwm_tx_path_flush_cmd* %8, i32 0, i32 1
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @htole32(i32 %13)
  store i32 %14, i32* %12, align 4
  %15 = load %struct.iwm_softc*, %struct.iwm_softc** %4, align 8
  %16 = load i32, i32* @IWM_TXPATH_FLUSH, align 4
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @iwm_mvm_send_cmd_pdu(%struct.iwm_softc* %15, i32 %16, i32 %17, i32 8, %struct.iwm_tx_path_flush_cmd* %8)
  store i32 %18, i32* %7, align 4
  %19 = load i32, i32* %7, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %27

21:                                               ; preds = %3
  %22 = load %struct.iwm_softc*, %struct.iwm_softc** %4, align 8
  %23 = getelementptr inbounds %struct.iwm_softc, %struct.iwm_softc* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* %7, align 4
  %26 = call i32 @device_printf(i32 %24, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i32 %25)
  br label %27

27:                                               ; preds = %21, %3
  %28 = load i32, i32* %7, align 4
  ret i32 %28
}

declare dso_local i32 @htole16(i32) #1

declare dso_local i32 @htole32(i32) #1

declare dso_local i32 @iwm_mvm_send_cmd_pdu(%struct.iwm_softc*, i32, i32, i32, %struct.iwm_tx_path_flush_cmd*) #1

declare dso_local i32 @device_printf(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
